--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
       <artifactId>hsqldb</artifactId>
       <version>2.7.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <version>RELEASE</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
