--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
-      <version>RELEASE</version>
+      <version>3.2.3</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
