--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.example</groupId>
   <artifactId>backend</artifactId>
@@ -76,6 +76,9 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <version>2.5.4</version>
+      <configuration>
+          <executable>true</executable>
+      </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -86,6 +89,35 @@
           <target>11</target>
         </configuration>
       </plugin>
+        <plugin>
+            <groupId>com.microsoft.azure</groupId>
+            <artifactId>azure-spring-apps-maven-plugin</artifactId>
+            <version>1.18.0</version>
+            <configuration>
+                <subscriptionId>81a958ce-9c53-4368-bddc-a31c3ce579f5</subscriptionId>
+                <resourceGroup>diploma</resourceGroup>
+                <clusterName>diploma-backend</clusterName>
+                <appName>backend</appName>
+                <isPublic>true</isPublic>
+                <deployment>
+                    <cpu>1</cpu>
+                    <memoryInGB>2</memoryInGB>
+                    <instanceCount>1</instanceCount>
+                    <runtimeVersion>Java 17</runtimeVersion>
+                    <resources>
+                        <resource>
+                            <filtering/>
+                            <mergeId/>
+                            <targetPath/>
+                            <directory>${project.basedir}/target</directory>
+                            <includes>
+                                <include>*.jar</include>
+                            </includes>
+                        </resource>
+                    </resources>
+                </deployment>
+            </configuration>
+        </plugin>
     </plugins>
   </build>
 </project>
