--- a/pom.xml
+++ b/pom.xml
@@ -18,20 +18,6 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
       <version>3.2.0</version>
-      <exclusions>
-        <exclusion>
-          <groupId>ch.qos.logback</groupId>
-          <artifactId>logback-classic</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.springframework</groupId>
-          <artifactId>spring-core</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.springframework</groupId>
-          <artifactId>spring-web</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
@@ -76,9 +62,13 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <version>2.5.4</version>
-      <configuration>
-          <executable>true</executable>
-      </configuration>
+          <executions>
+                <execution>
+                    <goals>
+                        <goal>repackage</goal>
+                    </goals>
+                </execution>
+          </executions>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -92,26 +82,24 @@
         <plugin>
             <groupId>com.microsoft.azure</groupId>
             <artifactId>azure-spring-apps-maven-plugin</artifactId>
-            <version>1.18.0</version>
+            <version>1.19.0</version>
             <configuration>
                 <subscriptionId>81a958ce-9c53-4368-bddc-a31c3ce579f5</subscriptionId>
-                <resourceGroup>diploma</resourceGroup>
-                <clusterName>diploma-backend</clusterName>
-                <appName>backend</appName>
-                <isPublic>true</isPublic>
+                <resourceGroup>java-api</resourceGroup>
+                <clusterName>diploma-service</clusterName>
+                <sku>Basic</sku>
+                <appName>endpoints</appName>
+                <isPublic>false</isPublic>
                 <deployment>
-                    <cpu>1</cpu>
-                    <memoryInGB>2</memoryInGB>
+                    <cpu>1.0</cpu>
+                    <memoryInGB>2.0</memoryInGB>
                     <instanceCount>1</instanceCount>
-                    <runtimeVersion>Java 17</runtimeVersion>
+                    <runtimeVersion>Java_17</runtimeVersion>
                     <resources>
                         <resource>
-                            <filtering/>
-                            <mergeId/>
-                            <targetPath/>
                             <directory>${project.basedir}/target</directory>
                             <includes>
-                                <include>*.jar</include>
+                                <include>backend-1.0-SNAPSHOT.jar</include>
                             </includes>
                         </resource>
                     </resources>
